--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 
 @import url('./base.css');
@@ -11,4 +5,8 @@
 
 /* Sections style */
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./about.css');
+@import url('./concerts.css');
+@import url('./contact.css');
 @import url('./footer.css');
