--- a/src/partials/concerts.html
+++ b/src/partials/concerts.html
@@ -15,7 +15,7 @@
           <td class="concert-location" data-label="Місто / Заклад">
             Київ — Docker-G Pub
           </td>
-          <td class="concert-price" data-label="К-ть місць">250</td>
+          <td class="concert-available-tickets" data-label="К-ть місць">250</td>
           <td data-label="Дата і час">25.10.2025, 19:00</td>
           <td data-label="">
             <button
@@ -30,7 +30,7 @@
           <td class="concert-location" data-label="Місто / Заклад">
             Львів — !FESTrepublic
           </td>
-          <td class="concert-price" data-label="К-ть місць">400</td>
+          <td class="concert-available-tickets" data-label="К-ть місць">400</td>
           <td data-label="Дата і час">01.11.2025, 20:00</td>
           <td data-label="">
             <button
@@ -45,7 +45,7 @@
           <td class="concert-location" data-label="Місто / Заклад">
             Одеса — Зелен театр
           </td>
-          <td class="concert-price" data-label="К-ть місць">700</td>
+          <td class="concert-available-tickets" data-label="К-ть місць">700</td>
           <td data-label="Дата і час">08.11.2025, 18:30</td>
           <td data-label="">
             <button
