layout: history section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,9 +3,9 @@
     <nav class="page-navigation">
       <a href="#" class="logo">G&G</a>
       <ul class="nav-menu">
-        <li><a href="#about">Про гурт</a></li>
+        <li><a href="#history">Про гурт</a></li>
         <li><a href="#concerts">Концерти</a></li>
-        <li><a href="#gallery">Галерея</a></li>
+        <li><a href="#about">Галерея</a></li>
         <li><a href="#contact">Контакти</a></li>
       </ul>
       <div class="burger-menu">
