--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,8 @@
 /* Sections style */
 @import url('./header.css');
 @import url('./hero.css');
-@import url('./about.css');
 @import url('./concerts.css');
+@import url('./about.css');
+@import url('./history.css');
 @import url('./contact.css');
 @import url('./footer.css');
