--- a/src/css/about.css
+++ b/src/css/about.css
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  gap: 40px;
 }
 
 .member-card {
@@ -39,7 +40,7 @@
   background: #1a1a1a;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .about-us-section {
     padding: 40px 10px;
   }
