--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -47,5 +47,20 @@
   text-align: left;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+  .rights-and-links {
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+
+  .contacts-footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contacts-footer a:not(:last-child)::after {
+    content: '';
+  }
 }
