--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
 
 /* Sections style */
 @import url('./header.css');
+@import url('./modal.css');
 @import url('./hero.css');
 @import url('./concerts.css');
 @import url('./about.css');
