func: contact form

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -103,6 +103,22 @@
   font-size: 1.2rem;
 }
 
+.loading {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #333333;
+  border-radius: 50%;
+  border-top-color: #ff4757;
+  animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media screen and (max-width: 767px) {
   .contact {
     padding: 40px 10px;
@@ -136,7 +152,9 @@
   }
 
   .submit-button {
-    width: 100%;
+    display: block;
+    width: 80%;
+    margin: 0px auto;
     padding: 12px 20px;
   }
 }
