func: buy ticket

--- a/src/partials/concerts.html
+++ b/src/partials/concerts.html
@@ -16,14 +16,11 @@
             Київ — Docker-G Pub
           </td>
           <td class="concert-available-tickets" data-label="К-ть місць">250</td>
-          <td data-label="Дата і час">25.10.2025, 19:00</td>
+          <td class="concert-date" data-label="Дата і час">
+            25.10.2025, 19:00
+          </td>
           <td data-label="">
-            <button
-              class="buy-ticket"
-              onclick="buyTicket('Київ — Docker Pub', '25.10.2025, 19:00', 250)"
-            >
-              Замовити квиток
-            </button>
+            <button type="button" class="buy-ticket">Замовити квиток</button>
           </td>
         </tr>
         <tr class="concert-row">
@@ -31,14 +28,11 @@
             Львів — !FESTrepublic
           </td>
           <td class="concert-available-tickets" data-label="К-ть місць">400</td>
-          <td data-label="Дата і час">01.11.2025, 20:00</td>
+          <td class="concert-date" data-label="Дата і час">
+            01.11.2025, 20:00
+          </td>
           <td data-label="">
-            <button
-              class="buy-ticket"
-              onclick="buyTicket('Львів — JazzRepublic', '01.11.2025, 20:00', 400)"
-            >
-              Замовити квиток
-            </button>
+            <button type="button" class="buy-ticket">Замовити квиток</button>
           </td>
         </tr>
         <tr class="concert-row">
@@ -46,14 +40,11 @@
             Одеса — Зелен театр
           </td>
           <td class="concert-available-tickets" data-label="К-ть місць">700</td>
-          <td data-label="Дата і час">08.11.2025, 18:30</td>
+          <td class="concert-date" data-label="Дата і час">
+            08.11.2025, 18:30
+          </td>
           <td data-label="">
-            <button
-              class="buy-ticket"
-              onclick="buyTicket('Одеса — Зелен театр', '08.11.2025, 18:30', 700)"
-            >
-              Замовити квиток
-            </button>
+            <button type="button" class="buy-ticket">Замовити квиток</button>
           </td>
         </tr>
         <tr class="concert-row">
@@ -61,14 +52,11 @@
             Харків — ArtZavod
           </td>
           <td class="concert-price" data-label="К-ть місць">600</td>
-          <td data-label="Дата і час">16.11.2025, 19:00</td>
+          <td class="concert-date" data-label="Дата і час">
+            16.11.2025, 19:00
+          </td>
           <td data-label="">
-            <button
-              class="buy-ticket"
-              onclick="buyTicket('Харків — ArtZavodі', '16.11.2025, 19:00', 600)"
-            >
-              Замовити квиток
-            </button>
+            <button type="button" class="buy-ticket">Замовити квиток</button>
           </td>
         </tr>
       </tbody>
