--- a/src/css/concerts.css
+++ b/src/css/concerts.css
@@ -77,6 +77,12 @@
   transform: scale(1.05);
 }
 
+.sold-out {
+  width: 125px;
+  pointer-events: none;
+  background-color: #666666;
+}
+
 @media screen and (max-width: 767px) {
   .concerts {
     padding: 40px 10px;
