--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,23 +3,15 @@
     <h2 class="section-title">Учасники гурту</h2>
     <div class="members">
       <div class="member-card">
-        <img
-          src="../img/guitarist.jpg"
-          alt="music band's member"
-          width="300px"
-        />
+        <img src="/img/guitarist.jpg" alt="music band's member" width="300px" />
         <p class="member-name">Максим — гітара</p>
       </div>
       <div class="member-card">
-        <img
-          src="../img/vocalist.jpg"
-          alt="music band's member"
-          width="300px"
-        />
+        <img src="/img/vocalist.jpg" alt="music band's member" width="300px" />
         <p class="member-name">Олена — вокал</p>
       </div>
       <div class="member-card">
-        <img src="../img/drummer.jpg" alt="music band's member" width="300px" />
+        <img src="/img/drummer.jpg" alt="music band's member" width="300px" />
         <p class="member-name">Тарас — барабани</p>
       </div>
     </div>
