fix: hero backround img

--- a/src/partials/history.html
+++ b/src/partials/history.html
@@ -31,7 +31,7 @@
       </div>
       <img
         class="history-image"
-        src="/img/pexels-annamw-1047442 (1).jpg"
+        src="/img/pexels-annamw-1047442.jpg"
         alt="music band"
         width="400px"
       />
