fix: buy tickets - last button

--- a/src/partials/concerts.html
+++ b/src/partials/concerts.html
@@ -51,7 +51,7 @@
           <td class="concert-location" data-label="Місто / Заклад">
             Харків — ArtZavod
           </td>
-          <td class="concert-price" data-label="К-ть місць">600</td>
+          <td class="concert-available-tickets" data-label="К-ть місць">600</td>
           <td class="concert-date" data-label="Дата і час">
             16.11.2025, 19:00
           </td>
